More restructuring, Automated List of  Acronyms, Symbols.

--- a/Back/listofpublications.tex
+++ b/Back/listofpublications.tex
@@ -4,34 +4,25 @@
 %\vspace{5mm}
 \textbf{{\large Referred journals:}}
 \begin{enumerate}[label=\textbf{[\arabic*]}]
-\item Aswathy Madhu and Suresh K., ``EnvGAN: A GAN based
-augmentation to improve Environmental Sound Classification'',
+\item A and B, ``Methods to improve Speech Recognition'',
 \emph{Artificial Intelligence Review} (2022), Springer.
-\url{https://doi.org/10.1007/s10462-022-10153-0}.
-\item Aswathy Madhu and Suresh K., ``AtResNet: Residual Atrous CNN
-with multi-scale feature representation for low complexity Acoustic Scene
-Classification'', \emph{Circuits, Systems and Signal Processing} (2022),
-Springer.
-\url{https://doi.org/10.1007/s00034-022-02107-2}.
+\url{https://doi.org/10.15}.
+
 \end{enumerate}
 \noindent\rule{\linewidth}{0.2pt}
 %\vspace{5mm}
 \textbf{{\large International conferences:}}
 \begin{enumerate}[label=\textbf{[\arabic*]}]
-\item Aswathy Madhu and Suresh K., ``Data augmentation using
-generative adversarial network for environmental sound classification'', in
-\emph{Proc. $27^{th}$ European Signal Processing Conference (EUSIPCO)},
-Spain, Sep 2 - 6, 2019, pp. 1–5.  \url{https://doi.org/10.23919/EUSIPCO.2019.8902819}.
-\item Aswathy Madhu and Suresh K., ``SiamNet: Siamese CNN based Similarity Model for Adversarially Generated Environmental Sounds'', in \emph{Proc. $31^{st}$ IEEE International Workshop on Machine Learning for
-Signal Processing (MLSP-21)}, Gold Coast, Australia, Sep 25 - 28, 2021. \url{https://doi.org/10.1109/MLSP52302.2021.9596435}
-\item Aswathy Madhu and Suresh K., ``EHTNet: Twin-pooled CNN with Empirical Mode Decomposition and Hilbert Spectrum for Acoustic Scene Classification'', in \emph{Proc. $14^{th}$ IEEE International Conference on Signal Processing and Communications (SPCOM)}, India, July 11 - 15, 2022.
+\item A and B, ``Methods to improve Speech Recognition'',
+\emph{Artificial Intelligence Review} (2022), Springer.
+\url{https://doi.org/10.15}.
+
 \end{enumerate}
 \noindent\rule{\linewidth}{0.2pt}
 %\vspace{5mm}
 \textbf{{\large Papers communicated in referred journals:}}
 \begin{enumerate}[label=\textbf{[\arabic*]}]
-\item Aswathy Madhu and Suresh K., ``RQNet: Residual Quaternion
-CNN for Performance Enhancement in Low Complexity Device Robust
-Acoustic Scene Classification'', \textbf{communicated to} \emph{IEEE
-Transactions on Multimedia}.
+\item A and B, ``Methods to improve Speech Recognition'',
+\emph{Artificial Intelligence Review} (2022), Springer.
+\url{https://doi.org/10.15}.
 \end{enumerate}
