--- a/Front/acknowledgment.tex
+++ b/Front/acknowledgment.tex
@@ -15,6 +15,6 @@ It is a great pleasure for me to express my respect and deep sense of gratitude 
 
 \vspace{1.2cm}
 \begin{flushright}
-	\textbf{(\thescholar)}
+	\textbf{\thescholar}
 \end{flushright}
 
