--- a/Front/certificate.tex
+++ b/Front/certificate.tex
@@ -43,10 +43,12 @@ Engineering College, Thiruvananthapuram}
 % Professor and Head,\\Dept. of Electronics and Communication
 %Engineering\\ Govt. Engineering College, Idukki}
 % \end{flushleft}
-\vspace{15mm}
 
 \begin{flushleft}
-
-Date:\\
-Place:
+\vspace{25mm}
+\begin{tabular}{@{}p{1cm}p{5cm}@{}}
+Date: & \hrulefill\\
+& \\
+Place: & \hrulefill\\
+\end{tabular}
 \end{flushleft}
