--- a/Front/declaration.tex
+++ b/Front/declaration.tex
@@ -10,32 +10,22 @@
 {\bf\large Declaration }\\
 \par\vspace{5mm}
 \end{center}
-\noindent I declare that this written submission represents my ideas in my own
-words and where others'
-ideas or words have been included, I have adequately cited and referenced the
-original sources. I also
-declare that I have adhered to all principles of academic honesty and integrity
-and have not
-misrepresented or fabricated or falsified any idea/data/fact/source in my
-submission. I understand that
-any violation of the above will be cause for disciplinary action by the University
-and can also evoke
-penal action from the sources which have thus not been properly cited or from
-whom proper
-permissions have not been taken when needed.
-\vspace{20mm}
-% \begin{flushright}
-% Signature
-% \end{flushright}
-\vspace{10mm}
-\begin{flushright}
-\thescholar\end{flushright}\vspace{10mm}
-\begin{flushright}
+\noindent I declare that this written submission represents my ideas in my own words and where others' ideas or words have been included, I have adequately cited and referenced the
+original sources. I also declare that I have adhered to all principles of academic honesty and integrity and have not misrepresented or fabricated or falsified any idea/ data/ fact/ source in my submission. I understand that any violation of the above will be cause for disciplinary action by the University and can also evoke penal action from the sources which have thus not been properly cited or from whom proper permissions have not been taken when needed.
 
-Reg No. \theregnumber
+\begin{flushright}
+% % Signature
+\vspace{25mm}
+\begin{tabular}{r}
+\hrulefill \\
+\thescholar \\
+\ \ \ \ \theregnumber
+\end{tabular}
 \end{flushright}
-\vspace{30mm}
-\begin{flushleft}
 
-Date:
-\end{flushleft}
+
+
+\vspace{25mm}
+\begin{tabular}{@{}p{1cm}p{5cm}@{}}
+Date: & \hrulefill\\
+\end{tabular}
