--- a/Front/titlepage.tex
+++ b/Front/titlepage.tex
@@ -13,16 +13,13 @@
 \vspace{5mm}
 % \large submitted by \\
 % \vspace{8mm}
-\fontsize{15pt}{18pt}{{\thescholar} \\ { (\theregnumber)}} \\
+\fontsize{15pt}{18pt}\textbf{ \thescholar }\vspace{-0.2cm}\\ (\theregnumber)\\
 
 % \vspace{2mm}
-Supervisors: \\
+Supervisor: \thesupervisor\\ 
 % \vspace{1mm}
-{\thesupervisor\\ }
-% \vspace{2mm}
-% Co-Supervisor: \\
-% \vspace{1mm}
-{\thecosupervisor\\ }
+\vspace{-.2cm}
+Co-Supervisor: \thecosupervisor\\ 
 \vspace{5mm}
 \begin{figure}[h!]
 \centering
