--- a/Preamble/macro.tex
+++ b/Preamble/macro.tex
@@ -1,10 +1,10 @@
 
 % define specific info
-\newcommand\thetitle{Investigation of the Linguistic Challenges and Solutions for Malayalam Automatic Speech Recognition}
-\newcommand\thescholar{Kavya Manohar}
-\newcommand\theregnumber{D-TVE19JAN002}
-\newcommand\thesupervisor{Dr. A. R. Jayan}
-\newcommand\thecosupervisor{Dr. Rajeev Rajan}
+\newcommand\thetitle{A very interesting Title}
+\newcommand\thescholar{Kate Researcher}
+\newcommand\theregnumber{A-123456}
+\newcommand\thesupervisor{Dr. Alice A}
+\newcommand\thecosupervisor{Dr. Black B}
 \newcommand\theyear{2023}
-\newcommand\thedepartment{Department of Electronics and Communication Engineering} 
-\newcommand\thecollege{College of Engineering Trivandrum} 
+\newcommand\thedepartment{Department of ABC} 
+\newcommand\thecollege{College of Engineering} 
