--- a/Preamble/packages.tex
+++ b/Preamble/packages.tex
@@ -3,7 +3,7 @@
 \usepackage[autostyle]{csquotes}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[labelfont=bf]{caption}
-\usepackage[acronym,nonumberlist]{glossaries}
+\usepackage[acronym,nonumberlist,toc]{glossaries}
 \usepackage{emptypage}
 \usepackage{array,float,multirow,graphicx,setspace,cite,url,titlesec,tocloft}
 \usepackage{amsmath,amsfonts,mathtools,notoccite,cleveref}
