--- a/Preamble/fonts.tex
+++ b/Preamble/fonts.tex
@@ -4,6 +4,16 @@
 \usepackage{calligra}
 \usepackage{fontspec}
 
+%For Times New Roman as the roman font
 \setromanfont{Times New Roman}
+
+% \setromanfont{Malini}[
+%     Path=./MaliniFont/,
+%     Extension = .otf,
+%     UprightFont=*-Regular,
+%     BoldFont=*-Bold,
+%     % ItalicFont=*-Italic,
+%     % BoldItalicFont=*-BoldItalic
+%     ]
 \setsansfont{Arial}
 \setmonofont[Color={0019D4}]{Courier New}
