Remove unused packages

--- a/Preamble/packages.tex
+++ b/Preamble/packages.tex
@@ -1,6 +1,5 @@
-\usepackage{authblk,lineno,color,lscape,url,sectsty}
+\usepackage{authblk,lineno,color,lscape,url}
 \usepackage[hidelinks]{hyperref}
-\usepackage[autostyle]{csquotes}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[labelfont=bf]{caption}
 \usepackage[acronym,nonumberlist,toc]{glossaries}
